[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/atom_selector/atom_selector.tscn" type="PackedScene" id=1]
[ext_resource path="res://molecule_ressource_creator.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://gui/molecule/molecule_gui.tscn" type="PackedScene" id=4]

[node name="molecule_ressource_savor" type="Control"]
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="." instance=ExtResource( 1 )]

[node name="LineEdit" type="LineEdit" parent="."]
margin_right = 344.0
margin_bottom = 49.0
text = "name"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkButton" type="Button" parent="."]
margin_left = 3.0
margin_top = 469.0
margin_right = 257.0
margin_bottom = 540.0
text = "ok"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="."]
margin_left = 270.405
margin_top = 465.636
margin_right = 524.405
margin_bottom = 536.636
text = "save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 97.0
margin_bottom = 76.0
window_title = "Alerte !"

[node name="MoleculePanel" parent="." instance=ExtResource( 4 )]
margin_left = 3.0
margin_top = 109.0
margin_right = 357.0
margin_bottom = 271.0
